# Think-Like-a-Programmer

./: CMakeLists.txt  Think.files  Think.includes
Chapter-2-Exercises/: Luhn-Checksum-Validation.cpp
Chapter-3-Exercises/: Finding-the-Mode_vect.cpp
Chapter-4-Exercises/: Exercise-4-1.cpp  Variable-Length-String-Manipulation.cpp
Chapter-7-Exercises/Efficient-Traversal/: scIterator.cpp
Chapter-8/: matchWords.cpp
